Prevent `code` from overflowing content boundaries.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -513,6 +513,12 @@ padding: 6px;
 }
 
 
+code {
+  word-wrap: break-word;      /* IE 5.5-7 */
+  white-space: -moz-pre-wrap; /* Firefox 1.0-2.0 */
+  white-space: pre-wrap;      /* current browsers */
+}
+
 .download_section{
   padding-left:40px;
 }
